fixing box sizing on firefox

--- a/main.css
+++ b/main.css
@@ -1012,6 +1012,7 @@ footer p {
   top: 0;
   left: 0;
   display: none;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
